# waku-python-bindings

./: .gitignore  .gitmodules  LICENSE-APACHEv2  LICENSE-MIT  README.md  pyproject.toml  requiremets.txt  run_py.sh  setup.py
tests/: waku_example.py
waku/: __init__.py  waku.py
